--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>task1s</title> 
 </head>
-<body>
-    <h2>I am Anas Mujahid</h2>
-    <p>Welcome to my Web Page!</p>
-    <P> </P>
+<body style="background-image: url('/backgroung.jpg '); color: white; background-size: cover;">
+    <h2 style="text-align: center;">I am Anas Mujahid</h2>
+    <h3  style="text-align: center;">Welcome to My Web Page!</h3>
+    <P style="text-align: justify;">I am a student of 11th class and I like web developing very much so i have completed HTML, and CSS. One of my favorite hobbies is exploring the vast world of the internet. I love diving into new websites, discovering hidden gems of information, and learning about topics I never knew existed. Whether it's reading up on the latest tech trends, exploring online forums, or watching educational videos, there's always something new and exciting to uncover. Internet exploring allows me to stay informed, connect with people from around the globe, and satisfy my curiosity about the world.
+    </p>
+    <h2>My Hobbies</h2>
+    <ul>
+        <li>Exploring </li>
+        <li>Traling</li>
+        <li>Programming</li>
+        <li>Codding</li>
+        <li>Web Development</li>
+        
+    </ul>
+    <h2>My Favorite Picture</h2>
+    <img src="/anas.jpg" height="300px" style="border-radius: 10px;" alt="It's me.">
 
-      
+    <h2>My Favorite Website</h2>
+      <p><a href="https://developer.mozilla.org/en-US/" target="main">Click here</a> to Visit  my F
+        avorite Website </p>
 </body>
 </html>
